# pybrisk

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md
api/configuration/: index.html
api/endpoints/: index.html
api/market/: index.html
api/ticker/: index.html
authentication/: index.html
configuration/: index.html
docs/: authentication.md  configuration.md  index.md  spec.md  ticker.md
docs/api/: endpoints.md  market.md
docs/research/: api-endpoints.md  architecture.md  authentication.md  data-flow.md  data-schemas.md  how-it-works.md  overview.md  websocket_protocol.md
endpoints/: index.html
examples/: quickstart.ipynb
guide/authentication/: index.html
market/: index.html
research/: sbi.brisk.jp.har
research/api-endpoints/: index.html
research/architecture/: index.html
research/authentication/: index.html
research/data-flow/: index.html
research/data-schemas/: index.html
research/how-it-works/: index.html
research/overview/: index.html
research/websocket_protocol/: index.html
research/ws_frames/: connection_debug.json  dump_qrm.py  extract_tick_tables_final3.py  fita.wasm  fita_wasm.js  frame_0001_sent.txt  frame_0005_recv.txt  frame_0006_sent.txt  frame_0008_recv.txt  frame_0009_sent.txt  frame_17672_recv.txt  playwright_debug.json  ptr_to_issue_id.json  tick_tables.json
scripts/: analyze_both_bits_price.py  binary_decoder.py  cdp_live_reader.py  correlate_ws_decode.py  field_format_summary.py  hook_wasm_decoder.py  validate_offset2.py  validate_tick_deltas.py
search/: search_index.json
spec/: index.html
src/pybrisk/: __init__.py  market.py  ticker.py
tasks/done/: TASK-001-project-scaffold.md  TASK-002-config.md  TASK-003-exceptions.md  TASK-004-endpoints.md  TASK-005-models.md  TASK-006-session.md  (+6 more)
ticker/: index.html
(+25 files in other folders)
