[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybrisk"
version = "0.1.0"
description = "Python client for SBI BRiSK market data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "obichan117" }]
keywords = ["sbi", "brisk", "market-data", "stocks", "tse", "japan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pandas-stubs>=2.0",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/obichan117/pybrisk"
Documentation = "https://obichan117.github.io/pybrisk/"
Repository = "https://github.com/obichan117/pybrisk"

[tool.hatch.build.targets.wheel]
packages = ["src/pybrisk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/integration/"
markers = [
    "integration: marks tests that call real APIs",
]
